--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,10 +9,10 @@
   </div>
 {%- endif %}
 
-<div class="sidebar-section" style={text-align: center}>
+<div class="sidebar-section" style="text-align: center">
     <ul class="contact-list">
         <li>
-            <p>Senior at Penn</p>
+            <p>Senior @ Penn</p>
         </li>
         <li>
             <p>Data Science & Systems Engineering</p>
