--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,13 +9,19 @@
   </div>
 {%- endif %}
 
-<div class="sidebar-section" style="text-align: center">
+<div class="sidebar-section" style="text-align: center; margin-bottom: 0">
     <ul class="contact-list">
         <li>
             <p>Senior @ Penn</p>
         </li>
         <li>
-            <p>Data Science & Systems Engineering</p>
+            <p> </p>
+        </li>
+        <li>
+            <p>Data Science</p>
+        </li>
+        <li>
+            <p>Systems Engineering</p>
         </li>
     </ul>
 </div>
