--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,19 +9,16 @@
   </div>
 {%- endif %}
 
-<div class="sidebar-section" style="text-align: center; margin-bottom: 0">
+<div class="sidebar-section" style="text-align: center">
     <ul class="contact-list">
         <li>
-            <p>Senior @ Penn</p>
+            <p style="margin-bottom: 1rem">Senior @ Penn</p>
         </li>
         <li>
-            <p> </p>
+            <p style="margin-bottom: 0rem">Data Science</p>
         </li>
         <li>
-            <p>Data Science</p>
-        </li>
-        <li>
-            <p>Systems Engineering</p>
+            <p style="margin-bottom: 0rem">Systems Engineering</p>
         </li>
     </ul>
 </div>
