--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -9,13 +9,14 @@
   </div>
 {%- endif %}
 
+<link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,600&amp;display=swap" rel="stylesheet">
 <div class="sidebar-section" style="text-align: center">
     <ul class="contact-list">
         <li>
             <p style="margin-bottom: 1rem">Senior @ Penn</p>
         </li>
         <li>
-            <a style="margin-bottom: 0rem" href="https://dats.seas.upenn.edu/">Data Science</a>
+            <a style="margin-bottom: 0rem; font-family: 'IBM Plex Sans Condensed', sans-serif; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
         </li>
         <li>
             <a style="margin-bottom: 0rem" href="https://www.ese.upenn.edu/">Systems Engineering</a>
