--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,37 +1,37 @@
 {% if site.avatar -%}
-  <div class="sidebar-section">
+<div class="sidebar-section">
     {%- if site.avatar contains "://" -%}
-      {%- assign avatar = site.avatar -%}
+    {%- assign avatar = site.avatar -%}
     {%- else -%}
-      {%- assign avatar = site.avatar | relative_url -%}
+    {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" alt="{{ site.author }}">
-  </div>
+</div>
 {%- endif %}
 
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,600&amp;display=swap" rel="stylesheet">
 <div class="sidebar-section" style="text-align: center">
     <ul class="contact-list">
         <li>
-            <p style="margin-bottom: 1rem">Senior @ Penn</p>
+            <p style="margin-bottom: 1rem;font-weight: 600;">Senior @ Penn</p>
         </li>
         <li>
-            <a style="margin-bottom: 0rem; font-family: 'IBM Plex Sans Condensed', sans-serif; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
+            <a style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
         </li>
         <li>
-            <a style="margin-bottom: 0rem" href="https://www.ese.upenn.edu/">Systems Engineering</a>
+            <a style="margin-bottom: 0rem; font-weight: 600;" href="https://www.ese.upenn.edu/">Systems Engineering</a>
         </li>
     </ul>
 </div>
 
 {% if site.data.social -%}
-  <div class="sidebar-section">
+<div class="sidebar-section">
     <ul class="social-icons">
-      {% for social in site.data.social -%}
+        {% for social in site.data.social -%}
         <li>
-          <a class="social-icon" href="{{ social.url }}"><i class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
+            <a class="social-icon" href="{{ social.url }}"><i class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
         </li>
-      {%- endfor %}
+        {%- endfor %}
     </ul>
-  </div>
+</div>
 {%- endif %}
