--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     {%- else -%}
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
-    <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" alt="{{ site.author }}">
+    <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center main-picture" alt="{{ site.author }}">
 </div>
 {%- endif %}
 
