--- a/_includes/header.html
+++ b/_includes/header.html
@@ -18,7 +18,7 @@
     <i class="far fa-user"></i>
   </a>
 
-  <a class="site-title" rel="author" href="{{ "/" | relative_url }}">Landon Butler</a>
+  <a rel="author" href="{{ "/" | relative_url }}">Landon Butler</a>
 
   {% if site.data.navigation %}
     <nav class="site-nav">
