--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     {%- endif -%}
     <i class="far fa-user"></i>
   </a>
-
+  <img src="{{ navbarLogo }}" draggable="false" class="align-center" style="width: 180px" alt="{{ site.author }}">
   <a rel="author" href="{{ "/" | relative_url }}">Landon Butler</a>
 
   {% if site.data.navigation %}
