--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,6 +6,7 @@
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" style="width: 180px" alt="{{ site.author }}">
+    <p><strong style="text-align: center">Landon Butler</strong></p>
 </div>
 {%- endif %}
 
