--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     {%- endif -%}
     <i class="far fa-user"></i>
   </a>
-  <img src="{{ navbarLogo }}" draggable="false" style="width: 180px" alt="{{ site.author }}">
+  <img src="/LBlogo.jpg" draggable="false" style="width: 50px" alt="{{ site.author }}">
 
   {% if site.data.navigation %}
     <nav class="site-nav">
