icon changed color

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,7 +30,7 @@
     <ul class="social-icons">
         {% for social in site.data.social -%}
         <li>
-            <a class="social-icon" href="{{ social.url }}"><i class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
+            <a class="social-icon" href="{{ social.url }}"><i style="color: #192841" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
         </li>
         {%- endfor %}
     </ul>
