Hyperlink changing color

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,7 @@
     {%- endif -%}
     <i class="far fa-user"></i>
   </a>
-  <img src="/LBlogo.jpg" draggable="false" style="height: 2em" alt="{{ site.author }}">
+  <a href="/"><img src="/LBlogo.jpg" draggable="false" style="height: 2em" alt="{{ site.author }}"></a>
 
   {% if site.data.navigation %}
     <nav class="site-nav">
