--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,13 +6,13 @@
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" style="width: 180px" alt="{{ site.author }}">
-    <p style="text-align: center; margin-bottom: 0rem; font-weight: 600;"><strong>Landon Butler</strong></p>
+    <p style="text-align: center; margin-top: 0.5rem;margin-bottom: 1rem; font-weight: 600; font-size: 1rem"><strong>Landon Butler</strong></p>
 </div>
 {%- endif %}
 
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,600&amp;display=swap" rel="stylesheet">
 <div class="sidebar-section" style="text-align: center">
-    <ul class="contact-list">
+    <ul class="contact-list" style="font-size: 0.8rem">
         <li>
             <p style="margin-bottom: 1rem;font-weight: 600;">Senior @ Penn</p>
         </li>
@@ -27,7 +27,7 @@
 
 {% if site.data.social -%}
 <div class="sidebar-section">
-    <ul class="social-icons">
+    <ul class="social-icons" style="text-align: center">
         {% for social in site.data.social -%}
         <li>
             <a class="social-icon sidebarLinks" href="{{ social.url }}"><i style="color: #203354" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
