target blank links

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,21 +6,21 @@
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" style="width: 180px" alt="{{ site.author }}">
-    <p class="sidebarFont" style="text-align: center; margin-top: 0.5rem;margin-bottom: 0rem; font-weight: 600; font-size: 1.2rem"><strong>Landon Butler</strong></p>
+    <p style="text-align: center; margin-top: 0.5rem;margin-bottom: 0rem; font-weight: 600; font-size: 1.2rem"><strong>Landon Butler</strong></p>
 </div>
 {%- endif %}
 
 <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Sans+Condensed:400,600&amp;display=swap" rel="stylesheet">
 <div class="sidebar-section" style="text-align: center">
-    <ul class="contact-list sidebarFont" style="font-size: 0.9rem">
+    <ul class="contact-list" style="font-size: 0.9rem">
         <li>
             <p style="margin-bottom: 1rem;font-weight: 600;">Senior @ Penn</p>
         </li>
         <li>
-            <a class="sidebarLinks" style="margin-bottom: 0rem; font-weight: 600; color: #203354" href="https://dats.seas.upenn.edu/">Data Science</a>
+            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600; color: #203354" href="https://dats.seas.upenn.edu/">Data Science</a>
         </li>
         <li>
-            <a class="sidebarLinks" style="margin-bottom: 0rem; font-weight: 600;color: #203354" href="https://www.ese.upenn.edu/">Systems Engineering</a>
+            <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;color: #203354" href="https://www.ese.upenn.edu/">Systems Engineering</a>
         </li>
     </ul>
 </div>
@@ -30,7 +30,7 @@
     <ul class="social-icons" style="text-align: center">
         {% for social in site.data.social -%}
         <li>
-            <a class="social-icon sidebarLinks" href="{{ social.url }}"><i style="color: #203354" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
+            <a class="social-icon sidebarLinks" target="_blank" href="{{ social.url }}"><i style="color: #203354" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
         </li>
         {%- endfor %}
     </ul>
