--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -31,6 +31,8 @@
         {% for social in site.data.social -%}
         <li>
             {% if social.title == 'Email' -%}
+            <a class="social-icon sidebarLinks" href="{{ social.url }}"><i style="color: #203354" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
+            {%- else %}
             <a class="social-icon sidebarLinks" target="_blank" href="{{ social.url }}"><i style="color: #203354" class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
             {%- endif %}
         </li>
