--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -1,6 +1,6 @@
 // Placeholder to allow customizing styles.
 
-a {
+a:hover {
     background-color: powderblue;
     transition: background-color .5s;
 }
