blue hover color

--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -1,6 +1,5 @@
 // Placeholder to allow customizing styles.
 
 a:hover {
-    background-color: powderblue;
-    transition: background-color .5s;
+    color: #88CDF6
 }
