--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -1,5 +1,9 @@
 // Placeholder to allow customizing styles.
 
-a:hover {
-    color: #88CDF6
+.sidebarLinks {
+    color: #203354;
+}
+
+.sidebarLinks:hover {
+    color: #88CDF6;
 }
