--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -1,7 +1,7 @@
 // Placeholder to allow customizing styles.
 
 .sidebarLinks {
-    color: #203354;
+    color: #203354 !important;
 }
 
 .sidebarLinks:hover {
