--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" style="width: 180px" alt="{{ site.author }}">
-    <p style="text-align: center; margin-top: 0.5rem;margin-bottom: 0rem; font-weight: 600; font-size: 1.2rem"><strong>Landon Butler</strong></p>
+    <p style="text-align: center;margin-top: 0.5rem;margin-bottom: 0rem;font-weight: 600;font-size: 1.2rem;color: #203354;"><strong>Landon Butler</strong></p>
 </div>
 {%- endif %}
 
@@ -14,7 +14,7 @@
 <div class="sidebar-section" style="text-align: center">
     <ul class="contact-list" style="font-size: 0.9rem">
         <li>
-            <p style="margin-bottom: 1rem;font-weight: 600;">Senior @ Penn</p>
+            <p style="margin-bottom: 1rem;font-weight: 600;color: #203354;">Senior @ Penn</p>
         </li>
         <li>
             <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
