removed top border

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,7 +7,7 @@
 
   <body>
     <div class="site-container">
-      <header class="site-header">
+      <header class="site-header" style="border-top: 0">
         {% include header.html %}
       </header>
       
