--- a/_includes/header.html
+++ b/_includes/header.html
@@ -34,16 +34,14 @@
         {%- for nav in site.data.navigation -%}
           {%- if nav.title -%}
             {% if nav.sublinks %}
-              <li class="dropdown" href="#">
-
-                  <div class="dropdown-content">
-                      <a href="javascript:void(0)" class="dropbtn">{{ nav.title | escape }}</a>
-                      {%- for link in nav.sublinks %}
-
-                      <a class="{% if page.url == link.url %}current-page{% endif %}" href="{{ link.url | relative_url }}">{{ link.title | escape }}</a>
-                      {%- endfor %}
-                  </div>
-              </li>
+          <li class="dropdown" href="#">
+              <a href="javascript:void(0)" class="dropbtn">{{ nav.title | escape }}</a>
+              <div class="dropdown-content">
+                  <a class="current-page" href="/research">Research</a>
+                  <a class="current-page" href="/teaching">Teaching</a>
+                  <a style="padding-right: 3rem" class="current-page" href="/CV">CV</a>
+              </div>
+          </li>
             {% else %}
               <li><a class="{% if page.url == nav.url %}current-page{% endif %}" href="{{ nav.url | relative_url }}">{{ nav.title | escape }}</a></li>
             {% endif %}
