--- a/_includes/header.html
+++ b/_includes/header.html
@@ -44,7 +44,7 @@
           </li>
           {% else %}
           {%- if nav.title == "CV"  -%}
-          <li><a style="padding-right: 3rem;font-weight: 600;" class="{% if page.url == nav.url %}current-page{% endif %} site-nav" href="{{ nav.url | relative_url }}">{{ nav.title | escape }}</a></li>
+          <li><a style="padding-right: 3rem;font-weight: 600;" class="{% if page.url == nav.url %}current-page{% endif %}" href="{{ nav.url | relative_url }}">{{ nav.title | escape }}</a></li>
           {% else %}
           <li><a style="font-weight: 600;" class="{% if page.url == nav.url %}current-page{% endif %}" href="{{ nav.url | relative_url }}">{{ nav.title | escape }}</a></li>
           {% endif %}
