--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,12 @@
     {%- assign avatar = site.avatar | relative_url -%}
     {%- endif -%}
     <img src="{{ avatar }}" draggable="false" class="author-avatar u-photo align-center" style="width: 180px" alt="{{ site.author }}">
-    <p style="text-align: center;margin-top: 0.5rem;margin-bottom: 0rem;font-weight: 600;font-size: 1.2rem;color: #203354;"><strong>Landon Butler</strong></p>
+    <p style="        text-align: center;
+        margin-top: 0.5rem;
+        margin-bottom: 0rem;
+        font-weight: 600;
+        font-size: 1.2rem;
+        color: #484848;"><strong>Landon Butler</strong></p>
 </div>
 {%- endif %}
 
@@ -14,7 +19,9 @@
 <div class="sidebar-section" style="text-align: center">
     <ul class="contact-list" style="font-size: 0.9rem">
         <li>
-            <p style="margin-bottom: 1rem;font-weight: 600;color: #203354;">Senior @ Penn</p>
+            <p style="        margin-bottom: 1rem;
+        font-weight: 600;
+        color: #484848;">Senior @ Penn</p>
         </li>
         <li>
             <a class="sidebarLinks" target="_blank" style="margin-bottom: 0rem; font-weight: 600;" href="https://dats.seas.upenn.edu/">Data Science</a>
@@ -31,9 +38,9 @@
         {% for social in site.data.social -%}
         <li>
             {% if social.title == 'Email' -%}
-            <a class="social-icon sidebarLinks" href="{{ social.url }}"><i  class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
+            <a class="social-icon sidebarLinks" href="{{ social.url }}"><i class="{{ social.icon | default: 'fas fa-link' }} fa-2x" title="{{ social.title }}"></i></a>
             {%- else %}
-            <a class="social-icon sidebarLinks" target="_blank" href="{{ social.url }}"><i  class="{{ social.icon | default: 'fas fa-link' }} fa-2x sidebarLinks" title="{{ social.title }}"></i></a>
+            <a class="social-icon sidebarLinks" target="_blank" href="{{ social.url }}"><i class="{{ social.icon | default: 'fas fa-link' }} fa-2x sidebarLinks" title="{{ social.title }}"></i></a>
             {%- endif %}
         </li>
         {%- endfor %}
