home page updates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
     <p>
-        Hello! My name is Landon and I'm a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's Degree in Data Science and a Bachelor's Degree in Systems Engineering; additionally, I've completed minors in Computer Science, Mathematics, and Statistics.
+        Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, inspiring me to complete minors in Computer Science, Mathematics, and Statistics.
     </p>
     <p>
         My research lies at the confluence of network science and machine learning
