--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,13 +2,14 @@
 layout: default
 ---
 
-<div class="home">
-    <p>
+<div class="home" style="hyphens: none">
+    <p >
         Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, inspiring me to complete minors in Computer Science, Mathematics, and Statistics.
     </p>
     <p>
-        My research lies at the confluence of network science and machine learning
+        My research lies at the confluence of network science and machine learning. 
     </p>
+    <img draggable="false" src="research_gif.gif">
     <p>
 
     </p>
