--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,8 @@ layout: default
     <p>
         My research lies at the confluence of network science and machine learning. 
     </p>
-    <img draggable="false" src="research_gif.gif">
+    <div>    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
+
     <p>
 
     </p>
