--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,7 +9,7 @@ layout: default
     <p>
         My research lies at the confluence of network science and machine learning. 
     </p>
-    <div>    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
+    <div style="text-align:center">    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
 
     <p>
 
