home page updates

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,15 +2,18 @@
 layout: default
 ---
 
-<div class="home" style="hyphens: none">
-    <p >
+<div class="home">
+    <p style="hyphens: none">
         Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, inspiring me to complete minors in Computer Science, Mathematics, and Statistics.
     </p>
-    <p>
-        My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. So far, I've had the opportunity to research data distribution polices amongst robot teams and anomaly detection on social networks. 
+    <p style="hyphens: none">
+        My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. So far, I've had the opportunity to research data distribution polices amongst robot teams and anomaly detection on social networks.
     </p>
     <div style="text-align:center">    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
-    <p>
-
+    <p style="hyphens: none">
+        Recently, I've began a Head Teaching Assistantship in the MCIT online program for ESE 542: Statistics for Data Science. I'm passionate about sharing these skills with new data scientists, as learning how to capture, intepret, and leverage data will be pivotal for many careers over the next few decades.
+    </p>
+    <p style="hyphens: none">
+        Outside of academics, I'm also a percussionist in the Penn Band and write drum scores and cadences in my spare time.
     </p>
 </div>
