--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -9,11 +9,11 @@ layout: default
     <p style="hyphens: none">
         My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. So far, I've had the opportunity to research data distribution polices amongst robot teams and anomaly detection on social networks.
     </p>
-    <div style="text-align:center">    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
+    <div style="text-align:center; margin-bottom: 2rem">    <img draggable="false" style="max-width: 50%" src="research_gif.gif"></div>
     <p style="hyphens: none">
         Recently, I've began a Head Teaching Assistantship in the MCIT online program for ESE 542: Statistics for Data Science. I'm passionate about sharing these skills with new data scientists, as learning how to capture, intepret, and leverage data will be pivotal for many careers over the next few decades.
     </p>
     <p style="hyphens: none">
-        Outside of academics, I'm also a percussionist in the Penn Band and write drum scores and cadences in my spare time.
+        Outside of academics, I'm also a percussionist in the Penn Band and write drum scores in my spare time.
     </p>
 </div>
