--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="home">
     <p style="hyphens: none">
-        Hello! I'm Landon, a senior at the University of Pennsylvania. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, inspiring me to complete minors in Computer Science, Mathematics, and Statistics.
+        Hello! I'm Landon, a senior at the <a target="_blank" src="https://www.upenn.edu/">University of Pennsylvania</a>. I'm concurrently pursuing a Master's degree in Data Science and a Bachelor's degree in Systems Engineering, seeking to better understand the systems that comprise the world around us from a data-driven perspective. Additionally, I'm interested in learning how to leverage a broad range of quantitive and computational skills, inspiring me to complete minors in Computer Science, Mathematics, and Statistics.
     </p>
     <p style="hyphens: none">
         My research lies at the confluence of network science and machine learning, where I develop and apply learning algorithms to dynamical systems situated on networks. So far, I've had the opportunity to research data distribution polices amongst robot teams and anomaly detection on social networks.
