--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -4,6 +4,14 @@
     color: #484848 !important;
 }
 
+.homepageLinks {
+    color: #484848 !important;
+}
+
 .sidebarLinks:hover {
+    color: #88CDF6 !important;
+}
+
+.homepageLinks {
     color: #88CDF6 !important;
 }
