--- a/_sass/hamilton/custom-styles.scss
+++ b/_sass/hamilton/custom-styles.scss
@@ -5,13 +5,13 @@
 }
 
 .homepageLinks {
-    color: #484848 !important;
+    color: #111 !important;
 }
 
 .sidebarLinks:hover {
     color: #88CDF6 !important;
 }
 
-.homepageLinks {
+.homepageLinks:hover {
     color: #88CDF6 !important;
 }
