--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,6 +13,6 @@ layout: default
         Recently, I've began a Head Teaching Assistantship in the <a target="_blank" class="homepageLinks" href="https://www.cis.upenn.edu/graduate/program-offerings/master-of-computer-and-information-technology/">MCIT online program</a> for <a target="_blank" class="homepageLinks" href="https://onlinelearning.seas.upenn.edu/mcit-online-course-list/">ESE 542: Statistics for Data Science</a>. I'm passionate about sharing these skills with new data scientists, as learning how to capture, intepret, and leverage data will be pivotal for many careers over the next few decades.
     </p>
     <p style="hyphens: none">
-        Outside of academics, I'm also a percussionist in the Penn Band <a target="_blank" class="homepageLinks" href="https://www.dolphin.upenn.edu/pennband/">Penn Band</a> and <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">write drum scores in my spare time</a>.
+        Outside of academics, I'm also a percussionist in the <a target="_blank" class="homepageLinks" href="https://www.dolphin.upenn.edu/pennband/">Penn Band</a> and <a target="_blank" class="homepageLinks" href="https://www.youtube.com/watch?v=jZbI4XdOvA8">write drum scores in my spare time</a>.
     </p>
 </div>
