bolding current page

--- a/_sass/hamilton/layout.scss
+++ b/_sass/hamilton/layout.scss
@@ -128,7 +128,7 @@
     }
 
     .current-page {
-        text-decoration: underline;
+        font-weight: bold;
     }
 
     @media screen and (min-width: $on-medium) {
