--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -2,7 +2,14 @@
 layout: default
 ---
 
-<iframe frameborder="0" scrolling="no"
-        width="640" height="480"
-        src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/view?usp=sharing">
-</iframe>
+<div id="adobe-dc-view" style="height: 360px; width: 500px;"></div>
+<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script type="text/javascript">
+    document.addEventListener("adobe_dc_view_sdk.ready", function () {
+        var adobeDCView = new AdobeDC.View({ clientId: "69855b3cd0b34061887d605f3aa3437d", divId: "adobe-dc-view" });
+        adobeDCView.previewFile({
+            content: { location: { url: "https://documentcloud.adobe.com/view-sdk-demo/PDFs/Bodea Brochure.pdf" } },
+            metaData: { fileName: "Landon Butler - CV.pdf" }
+        }, { embedMode: "SIZED_CONTAINER" });
+    });
+</script>
