pdf change size

--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -1,5 +1,6 @@
 ---
 layout: default
 ---
+<div class="home"><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="800"></iframe></div>
 
-<iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="640" height="480"></iframe>
+<p>this is blank text</p>
