--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
-<div class="home"><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="690"></iframe></div>
+<div style="text-align: center"><a src="Landon Butler - CV.pdf">Downloadable PDF</a></div>
+
+<div class="home"><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="750"></iframe></div>
 
 <p> </p>
