--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 ---
-<div style="text-align: center"><a src="Landon Butler - CV.pdf">Downloadable PDF</a></div>
+<div class="home" style="text-align: center; margin-top: 2rem; margin-bottom: 2rem"><a target="_blank" class="sidebarLinks" href="../Landon Butler - CV.pdf">Downloadable PDF</a></div>
 
 <div class="home"><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="750"></iframe></div>
 
