--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -1,7 +1,11 @@
 ---
 layout: default
 ---
-<div class="home" style="text-align: center; margin-top: 2rem; margin-bottom: 1rem"><a target="_blank" class="sidebarLinks" href="../Landon Butler - CV.pdf">Downloadable PDF</a></div>
+<div class="home" style="        text-align: center;
+        margin-top: 2rem;
+        margin-bottom: 1rem;
+        font-weight: 600;
+"><a target="_blank" class="sidebarLinks" href="../Landon Butler - CV.pdf">Downloadable PDF</a></div>
 
 <div><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="750"></iframe></div>
 
