--- a/_layouts/CV.html
+++ b/_layouts/CV.html
@@ -8,5 +8,21 @@ layout: default
 "><a target="_blank" class="sidebarLinks" href="../Landon Butler - CV.pdf">Downloadable PDF</a></div>
 
 <div><iframe src="https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" width="692" height="750"></iframe></div>
-
+<div id="adobe-dc-view" style="height: 750px; width: 692px;"></div>
+<script src="https://documentcloud.adobe.com/view-sdk/main.js"></script>
+<script type="text/javascript">
+    document.addEventListener("adobe_dc_view_sdk.ready", function () {
+        var adobeDCView = new AdobeDC.View({ clientId: "69855b3cd0b34061887d605f3aa3437d", divId: "adobe-dc-view" });
+        adobeDCView.previewFile({
+            content: {
+                location:
+                    { url: "https://drive.google.com/file/d/1pZZ1eDvylV5VT4YiSdjP9VUyJm51sdGs/preview" }
+            },
+            metaData: { fileName: "Landon Butler - CV.pdf" }
+        },
+            {
+                embedMode: "SIZED_CONTAINER"
+            });
+    });
+</script>
 <p> </p>
